--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- Quote -->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
-            <span id="quote">Gândește mereu pe termen lung.</span>
+            <span id="quote">Think on the long term.</span>
         </div>
         <!-- Author -->
         <div class="quote-author">
